@@ -72,6 +72,7 @@
 
     <ver.junit5>5.10.2</ver.junit5>
     <ver.junit5-platform>1.10.1</ver.junit5-platform>
+    <ver.mockito>5.12.0</ver.mockito>
 
     <ver.testcontainers>1.19.8</ver.testcontainers>
 
@@ -187,6 +188,12 @@
         <artifactId>kafka</artifactId>
         <version>${ver.testcontainers}</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
@@ -196,7 +203,14 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-    
+
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>${ver.mockito}</version>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -264,6 +278,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${ver.plugin.surefire}</version>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
+        </configuration>
       </plugin>
 
       <plugin>
